gitops/base/app/contoso-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"sqlserver"}]'
  labels:
    app: contoso
    app.kubernetes.io/component: contoso-app
    app.kubernetes.io/instance: contoso
    app.kubernetes.io/part-of: contoso-app
    app.openshift.io/runtime: dotnet
  name: contoso
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: contoso
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: contoso
        deploymentconfig: contoso
    spec:
      containers:
        - image: contoso:latest
          imagePullPolicy: Always
          name: contoso
          ports:
          - containerPort: 8080
            protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
